--- a/index.html
+++ b/index.html
@@ -1,22 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
-  </head>
-  <body>
-    <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-    </header>
-    <main>
-      <!-- Student code goes here -->
-    </main>
 
-    <footer>
-      <p>I can code!</p>
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Prework Study Guide</title>
+
+  <style>
+    .container {
+      width: 80%;
+      margin: auto;
+    }
+  </style>
+</head>
+
+<body>
+  <header id="top">
+    <h1>Prework Study Guide</h1>
+    <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+  </header>
+  <main>
+
+    <body class="container">
+      <div class="decscription">
+
+        <h1 class="header">
+          HTML
+        </h1>
+
+        <ul class="information">
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+        </ul>
+      </div>
+
+      <div class="description">
+
+        <h1 class="header">
+          CSS
+        </h1>
+
+        <ul class="information">
+          <li>Css notes here</li>
+          <li>More notes</li>
+        </ul>
+
+      </div>
+
+      <div class="description">
+
+        <h1 class="header">
+          Git
+        </h1>
+
+        <ul class="information">
+          <li>git status: checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+
+      </div>
+
+      <div class="description">
+
+        <h1 class="header">
+          JavaScript
+        </h1>
+
+        <ul class="information">
+          <li>Enter Javascript notes here.</li>
+        </ul>
+
+      </div>
+
+      <p>I can CODE!</p>
+    </body>
+  </main>
+
+  <footer>
+    <p class="copyright">Leone Varando Inc. © 2022</p>
+  </footer>
+</body>
+
 </html>
