Added sections tags to differentiate sections.

--- a/index.html
+++ b/index.html
@@ -23,57 +23,65 @@
   <main>
 
     <body class="container">
-      <div class="decscription">
+      <section class="card" id="html-section">
+        <div class="decscription">
 
-        <h1 class="header">
+        <h2 class="header">
           HTML
-        </h1>
+        </h2>
 
         <ul class="information">
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
         </ul>
-      </div>
+        </div>
+      </section>
 
-      <div class="description">
+      <section class="card" id="css-section">
+        <div class="description">
 
-        <h1 class="header">
+        <h2 class="header">
           CSS
-        </h1>
+        </h2>
 
         <ul class="information">
           <li>Css notes here</li>
           <li>More notes</li>
         </ul>
 
-      </div>
+        </div>
+      </section>
 
-      <div class="description">
+      <section class="card" id="git-section">
+        <div class="description">
 
-        <h1 class="header">
+        <h2 class="header">
           Git
-        </h1>
+        </h2>
 
         <ul class="information">
           <li>git status: checks what branch we are currently on.</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
         </ul>
 
-      </div>
+        </div>
+      </section>
 
-      <div class="description">
+      <section class="card" id="javascript-section">
+        <div class="description">
 
-        <h1 class="header">
+        <h2 class="header">
           JavaScript
-        </h1>
+        </h2>
 
         <ul class="information">
           <li>Enter Javascript notes here.</li>
         </ul>
 
-      </div>
-
-      <p>I can CODE!</p>
+        </div>
+      </section>
+      
+        <p>I can CODE!</p>
     </body>
   </main>
 
