Added styling to the webpage.

--- a/index.html
+++ b/index.html
@@ -6,19 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prework Study Guide</title>
-
-  <style>
-    .container {
-      width: 80%;
-      margin: auto;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <header id="top">
+  <header id="top" class="header">
     <h1>Prework Study Guide</h1>
-    <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+    <img class='profile-image' src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
   </header>
   <main>
 
@@ -26,9 +20,11 @@
       <section class="card" id="html-section">
         <div class="decscription">
 
-        <h2 class="header">
+        <h2>
           HTML
         </h2>
+
+        <div class="divider"></div>
 
         <ul class="information">
           <li>The head element contains information about the webpage.</li>
@@ -40,9 +36,11 @@
       <section class="card" id="css-section">
         <div class="description">
 
-        <h2 class="header">
+        <h2>
           CSS
         </h2>
+
+        <div class="divider"></div>
 
         <ul class="information">
           <li>Css notes here</li>
@@ -55,9 +53,11 @@
       <section class="card" id="git-section">
         <div class="description">
 
-        <h2 class="header">
+        <h2>
           Git
         </h2>
+
+        <div class="divider"></div>
 
         <ul class="information">
           <li>git status: checks what branch we are currently on.</li>
@@ -70,9 +70,11 @@
       <section class="card" id="javascript-section">
         <div class="description">
 
-        <h2 class="header">
+        <h2>
           JavaScript
         </h2>
+
+        <div class="divider"></div>
 
         <ul class="information">
           <li>Enter Javascript notes here.</li>
@@ -80,12 +82,11 @@
 
         </div>
       </section>
-      
-        <p>I can CODE!</p>
     </body>
   </main>
 
   <footer>
+    <p class="exclaim">I can CODE!</p>
     <p class="copyright">Leone Varando Inc. © 2022</p>
   </footer>
 </body>
