--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prework Study Guide</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/styles.css">
+  <link rel="script" href="assets/script.js">
 </head>
 
 <body>
   <header id="top" class="header">
     <h1>Prework Study Guide</h1>
     <img class='profile-image' src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+    <h2>✨ Open the Console to See What's Happening ✨</h2>
   </header>
   <main>
 
@@ -89,6 +91,7 @@
     <p class="exclaim">I can CODE!</p>
     <p class="copyright">Leone Varando Inc. © 2022</p>
   </footer>
+  <script src="assets/script.js"></script>
 </body>
 
 </html>
