Added functions to script.js that list and randomly select our topics studied in the prework

--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
       <section class="card" id="html-section">
         <div class="decscription">
 
-        <h2>
-          HTML
-        </h2>
+          <h2>
+            HTML
+          </h2>
 
-        <div class="divider"></div>
+          <div class="divider"></div>
 
-        <ul class="information">
-          <li>The head element contains information about the webpage.</li>
-          <li>The body element represents the visible content shown to the user.</li>
-        </ul>
+          <ul class="information">
+            <li>The head element contains information about the webpage.</li>
+            <li>The body element represents the visible content shown to the user.</li>
+          </ul>
         </div>
       </section>
 
       <section class="card" id="css-section">
         <div class="description">
 
-        <h2>
-          CSS
-        </h2>
+          <h2>
+            CSS
+          </h2>
 
-        <div class="divider"></div>
+          <div class="divider"></div>
 
-        <ul class="information">
-          <li>Css notes here</li>
-          <li>More notes</li>
-        </ul>
+          <ul class="information">
+            <li>Css notes here</li>
+            <li>More notes</li>
+          </ul>
 
         </div>
       </section>
@@ -55,16 +55,21 @@
       <section class="card" id="git-section">
         <div class="description">
 
-        <h2>
-          Git
-        </h2>
+          <h2>
+            Git
+          </h2>
 
-        <div class="divider"></div>
+          <div class="divider"></div>
 
-        <ul class="information">
-          <li>git status: checks what branch we are currently on.</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-        </ul>
+          <ul class="information">
+            <li><b class="underline">git status:</b> checks what branch we are currently on.</li>
+            <li><b class="underline">git checkout -b branch-name:</b> creates a new branch and switches to it</li>
+            <li><b class="underline">When Git asks for username and password:</b> git remote set-url origin (ssh key)
+            </li>
+            <li><b class="underline">To commit files for pull:</b> git commit -m “Message about what I edited”</li>
+            <li><b class="underline">To push committed files to the repo on GitHub:</b> git push origin (name of branch)
+            </li>
+          </ul>
 
         </div>
       </section>
@@ -72,15 +77,18 @@
       <section class="card" id="javascript-section">
         <div class="description">
 
-        <h2>
-          JavaScript
-        </h2>
+          <h2>
+            JavaScript
+          </h2>
 
-        <div class="divider"></div>
+          <div class="divider"></div>
 
-        <ul class="information">
-          <li>Enter Javascript notes here.</li>
-        </ul>
+          <ul class="information">
+            <li>A <b>variable</b> is a named container that allows us to store data in our code.</li>
+            <li><b>Variables</b> can hold many types of information such as, strings, integers, or any kind of data structure.</li>
+            <li><b>Functions</b> are a set of instructions that must be called on using their given function name.</li>
+            <li><b>Control flow</b> is the order in which a computer executes code in a script.</li>
+          </ul>
 
         </div>
       </section>
