Added more notes to the webpage and created a professional readme

--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
           <div class="divider"></div>
 
           <ul class="information">
-            <li>The head element contains information about the webpage.</li>
-            <li>The body element represents the visible content shown to the user.</li>
+            <li>The <b>head element</b> contains information about the webpage.</li>
+            <li>The <b>body element</b> represents the visible content shown to the user.</li>
+            <li><b>span</b> is used to seperate text only within your html file so that it can be targeted for css.</li>
+            <li><b>b between brackets</b> is used inline to bold certain letters or words with an element without using css.</li>
+            <li><b>img</b> is used to display an image with the html file. Requires a src attribute.</li>
+            <li><b>a</b> is used to anchor a link within the html file. Requires an href attribute with the url.</li>
+            <li>The <b>Class</b> attribute is used so that the element that the <b>class</b> is attached to can be targeted
+            for styling using CSS.</li>
           </ul>
         </div>
       </section>
@@ -45,8 +51,11 @@
           <div class="divider"></div>
 
           <ul class="information">
-            <li>Css notes here</li>
-            <li>More notes</li>
+            <li><b>Cascading Style Sheets, or CSS</b> is used to style a webpage.</li>
+            <li><b>Margin</b> indicates how much space is around a given container.</li>
+            <li><b>Padding</b> indicates how much space is inside the container.</li>
+            <li><b>text-decoration</b> is used to decorate the text such as, underlining, crossing the text out, etc.</li>
+            <li><b>background-color</b> gives the background of an element a color using rgb, hexadecimal, or hsl colors.</li>
           </ul>
 
         </div>
@@ -69,6 +78,7 @@
             <li><b class="underline">To commit files for pull:</b> git commit -m “Message about what I edited”</li>
             <li><b class="underline">To push committed files to the repo on GitHub:</b> git push origin (name of branch)
             </li>
+            <li><b class="underline">To add files to commit stage:</b> git add -A</li>
           </ul>
 
         </div>
