--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Prework Study Guide</title>
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="script" href="assets/script.js">
+  <link rel="shortcut icon" href="assets/favicon.ico">
 </head>
 
 <body>
