Added a logo to the title bar. Also changed color of header and footer and added color to the borders. Changed background color to a dark type.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Prework Study Guide</title>
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="script" href="assets/script.js">
-  <link rel="shortcut icon" href="assets/favicon.ico">
+  <link rel="icon" href="assets/favicon.ico">
 </head>
 
 <body>
@@ -17,6 +17,7 @@
     <img class='profile-image' src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     <h2>✨ Open the Console to See What's Happening ✨</h2>
   </header>
+  
   <main>
 
     <body class="container">
@@ -24,7 +25,9 @@
         <div class="decscription">
 
           <h2>
-            HTML
+            <a class='source-link'
+              href='https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics'
+              target="_blank">HTML</a>
           </h2>
 
           <div class="divider"></div>
@@ -33,11 +36,13 @@
             <li>The <b>head element</b> contains information about the webpage.</li>
             <li>The <b>body element</b> represents the visible content shown to the user.</li>
             <li><b>span</b> is used to seperate text only within your html file so that it can be targeted for css.</li>
-            <li><b>b between brackets</b> is used inline to bold certain letters or words with an element without using css.</li>
+            <li><b>b between brackets</b> is used inline to bold certain letters or words with an element without using
+              css.</li>
             <li><b>img</b> is used to display an image with the html file. Requires a src attribute.</li>
             <li><b>a</b> is used to anchor a link within the html file. Requires an href attribute with the url.</li>
-            <li>The <b>Class</b> attribute is used so that the element that the <b>class</b> is attached to can be targeted
-            for styling using CSS.</li>
+            <li>The <b>Class</b> attribute is used so that the element that the <b>class</b> is attached to can be
+              targeted for styling using CSS.
+            </li>
           </ul>
         </div>
       </section>
@@ -46,7 +51,8 @@
         <div class="description">
 
           <h2>
-            CSS
+            <a class='source-link' href='https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps/What_is_CSS'
+              target="_blank">CSS</a>
           </h2>
 
           <div class="divider"></div>
@@ -55,8 +61,10 @@
             <li><b>Cascading Style Sheets, or CSS</b> is used to style a webpage.</li>
             <li><b>Margin</b> indicates how much space is around a given container.</li>
             <li><b>Padding</b> indicates how much space is inside the container.</li>
-            <li><b>text-decoration</b> is used to decorate the text such as, underlining, crossing the text out, etc.</li>
-            <li><b>background-color</b> gives the background of an element a color using rgb, hexadecimal, or hsl colors.</li>
+            <li><b>text-decoration</b> is used to decorate the text such as, underlining, crossing the text out, etc.
+            </li>
+            <li><b>background-color</b> gives the background of an element a color using rgb, hexadecimal, or hsl
+              colors.</li>
           </ul>
 
         </div>
@@ -66,7 +74,8 @@
         <div class="description">
 
           <h2>
-            Git
+            <a class='source-link' href='https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F'
+              target='_blank'>Git</a>
           </h2>
 
           <div class="divider"></div>
@@ -89,14 +98,17 @@
         <div class="description">
 
           <h2>
-            JavaScript
+            <a class='source-link'
+              href='https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript'
+              target='_blank'>JavaScript</a>
           </h2>
 
           <div class="divider"></div>
 
           <ul class="information">
             <li>A <b>variable</b> is a named container that allows us to store data in our code.</li>
-            <li><b>Variables</b> can hold many types of information such as, strings, integers, or any kind of data structure.</li>
+            <li><b>Variables</b> can hold many types of information such as, strings, integers, or any kind of data
+              structure.</li>
             <li><b>Functions</b> are a set of instructions that must be called on using their given function name.</li>
             <li><b>Control flow</b> is the order in which a computer executes code in a script.</li>
           </ul>
